# speekify

./: .gitignore  .mcp.json  AGENTS.md  AUDIT_REPORT.md  LICENSE  PUBLISHING.md  README.md  SPECS.md  pyproject.toml
.codex/: config.toml  config.toml.example
.github/workflows/: deploy.yml  publish.yml  release.yml  test.yml
Formula/: speekify.rb
docs/: mcp-clients.md  release-procedure.md  sources.md  usage.md
docs/agents/: codebase-conventions.md  deletion-candidates.md  dependencies-integrations.md  development-commands.md  project-architecture.md  release-runbook.md  testing-patterns.md
docs/examples/: Caddyfile  speekify.nginx.conf
docs/man/: speekify.1
docs/superpowers/plans/: 2026-05-19-speekify-qol.md  2026-05-19-speekify.md
docs/superpowers/specs/: 2026-05-19-speekify-qol-design.md
scripts/: build_standalone_macos.sh  render_homebrew_formula.py
site/: .env.example  astro.config.mjs  components.json  package.json
site/public/: robots.txt  site.webmanifest
site/src/: tabler-icons.d.ts
site/src/assets/svg/: error-04-illustration.tsx
site/src/components/landing/: Card.astro  CliUsage.astro  CliUsage.tsx  CodeBlock.astro  CodeBlock.tsx  Footer.astro  Footer.tsx  Header.astro  Hero.astro  Hero.tsx  HowItWorks.astro  HowItWorks.tsx  Install.astro  Install.tsx  Landing.astro  Mcp.astro  Mcp.tsx  OpenSource.astro  OpenSource.tsx  UseCases.astro  UseCases.tsx  What.astro  What.tsx  Why.astro  Why.tsx
site/src/components/shadcn-studio/blocks/error-page-04/: error-page-04.tsx
site/src/components/shadcn-studio/blocks/hero-section-01/: hero-section-01.tsx
site/src/components/ui/: motion-preset.tsx
site/src/i18n/: content.ts  utils.ts
site/src/layouts/: Layout.astro
site/src/pages/: 404.astro  index.astro
site/src/pages/fr/: index.astro
site/src/styles/: global.css
src/speekify/: __init__.py  __main__.py  app.py  application.py  cli_rendering.py  config.py  console.py  dependencies.py  extract.py  extract_common.py  logging_utils.py  mcp_server.py  metadata.py  multilingual.py  naming.py  setup.py  translation.py  tts.py  user_config.py  validation.py  workflow.py
src/speekify/extractors/: __init__.py  html.py  medium.py  x.py  youtube.py
src/speekify/tagging/: __init__.py  cardiff.py  config.py  policy.py  sentiment.py  supertone.py  text.py
tests/: test_app_logging.py  test_application.py  test_cli.py  test_config.py  test_dependencies.py  test_extract.py  test_logging_utils.py  test_mcp_server.py  test_naming.py  test_packaging_assets.py  test_tagging_supertone.py  test_tagging_text.py  test_translation.py  test_tts.py  test_user_config.py  test_workflow.py
