[project]
name = "speekify"
version = "0.0.7"
description = "CLI URL/text to WAV converter powered by Supertonic v3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "supertonic>=1.3.1",
  "click>=8.1",
  "httpx>=0.27",
  "trafilatura>=1.9",
  "langdetect>=1.0.9",
  "rich>=13.7",
  "sacremoses>=0.1.1",
  "sentencepiece>=0.2",
  "torch>=2.8",
  "transformers>=4.57",
  # typer 0.26+ vendors click as typer._click, which breaks the click-based
  # CLI error handling and user-config parameter source detection in
  # speekify.__main__. Keep typer below 0.26 until that integration is reworked.
  "typer>=0.12,<0.26",
  "mcp>=1.13",
  "yt-dlp>=2024.12.13",
  "pypdf>=5.0",
]

[project.scripts]
speekify = "speekify.__main__:main"
speekify-mcp = "speekify.mcp_server:main"

[dependency-groups]
dev = [
  "pyinstaller>=6.16",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/speekify"]

[tool.hatch.build.targets.wheel.shared-data]
"docs/man/speekify.1" = "share/man/man1/speekify.1"

[tool.hatch.build.targets.sdist]
include = [
  "docs/man/speekify.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".uv-cache",
  ".venv",
  "__pycache__",
]
